# server

./: .deepsource.toml  .gitignore  Makefile  README.md  flake.nix  pyproject.toml  spellcheck_wordlist.txt
.devcontainer/: Dockerfile  devcontainer.json  post.sh
.github/workflows/: docker-build-and-push.yml  docker-build.yml  pylint.yml  spellcheck.yml
src/: Dockerfile  Dockerfile.nvidia  compile.py  docker-compose.nvidia.yml  docker-compose.yml  requirements.txt
src/youcube/: __main__.py  yc_colours.py  yc_download.py  yc_logging.py  yc_magic.py  yc_spotify.py  yc_utils.py  youcube.py
